// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assertions.js [espree] format 1`] = `
"Unexpected token , (1:20)
> 1 | import(\\"./foo.json\\", { assert: { type: \\"json\\" } });
    |                    ^
  2 |"
`;

exports[`assertions.js [flow] format 1`] = `
"Unexpected token \`,\`, expected the token \`)\` (1:20)
> 1 | import(\\"./foo.json\\", { assert: { type: \\"json\\" } });
    |                    ^
  2 |"
`;

exports[`assertions.js [meriyah] format 1`] = `
"[1:20]: Expected ')' (1:20)
> 1 | import(\\"./foo.json\\", { assert: { type: \\"json\\" } });
    |                    ^
  2 |"
`;

exports[`assertions.js [typescript] format 1`] = `
"Dynamic import must have one specifier as an argument. (1:8)
> 1 | import(\\"./foo.json\\", { assert: { type: \\"json\\" } });
    |        ^
  2 |"
`;

exports[`assertions.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import("./foo.json", { assert: { type: "json" } });

=====================================output=====================================
import("./foo.json", { assert: { type: "json" } });

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import("module.js");
import("module.js").then((a) => a);

=====================================output=====================================
import("module.js");
import("module.js").then((a) => a);

================================================================================
`;
